# qt-deepx-example

./: CMakeLists.txt
resources/: qml.qrc
resources/qml/: main.qml
src/: main.cpp  videostreamer.cpp  videostreamer.h  videostreamitem.cpp  videostreamitem.h  yolo.cpp  yolo_cfg.cpp
